infrastructure/k8s/leukocyte-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leukocyte-controller
  namespace: online-boutique
  labels:
    app: leukocyte-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leukocyte-controller
  template:
    metadata:
      labels:
        app: leukocyte-controller
    spec:
      serviceAccountName: leukocyte-controller-sa
      containers:
      - name: controller
        image: leukocyte/controller:transduction
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: leukocyte-controller
  namespace: online-boutique
spec:
  selector:
    app: leukocyte-controller
  ports:
  - port: 80
    targetPort: 8080
---
# Placeholder for EnvoyFilter to inject WASM
# In a real scenario, this would point to the compiled WASM binary
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: leukocyte-wasm-filter
  namespace: online-boutique
spec:
  workloadSelector:
    labels:
      app: adservice
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: leukocyte.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          config:
            name: leukocyte-plugin
            root_id: "leukocyte_root"
            vm_config:
              vm_id: "leukocyte_vm"
              runtime: "envoy.wasm.runtime.v8"
              code:
                local:
                  filename: "/var/local/lib/wasm/leukocyte.wasm" # Placeholder path
            configuration:
              "@type": "type.googleapis.com/google.protobuf.StringValue"
              value: "{}" # Default empty config to be patched
---
# EnvoyFilter for Billing Service (CheckoutService)
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: leukocyte-wasm-filter-checkoutservice
  namespace: online-boutique
spec:
  workloadSelector:
    labels:
      app: checkoutservice
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: leukocyte.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          config:
            name: leukocyte-plugin
            root_id: "leukocyte_root"
            vm_config:
              vm_id: "leukocyte_vm"
              runtime: "envoy.wasm.runtime.v8"
              code:
                local:
                  filename: "/var/local/lib/wasm/leukocyte.wasm"
            configuration:
              "@type": "type.googleapis.com/google.protobuf.StringValue"
              value: "{}"
---
# EnvoyFilter for Log Service (Transduction Target)
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: leukocyte-wasm-filter-logservice
  namespace: online-boutique
spec:
  workloadSelector:
    labels:
      app: logservice
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: leukocyte.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          config:
            name: leukocyte-plugin
            root_id: "leukocyte_root"
            vm_config:
              vm_id: "leukocyte_vm"
              runtime: "envoy.wasm.runtime.v8"
              code:
                local:
                  filename: "/var/local/lib/wasm/leukocyte.wasm"
            configuration:
              "@type": "type.googleapis.com/google.protobuf.StringValue"
              value: "{}"
---
# EnvoyFilter for Cart Service (Spring4Shell Target)
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: leukocyte-wasm-filter-cartservice
  namespace: online-boutique
spec:
  workloadSelector:
    labels:
      app: cartservice
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: leukocyte.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          config:
            name: leukocyte-plugin
            root_id: "leukocyte_root"
            vm_config:
              vm_id: "leukocyte_vm"
              runtime: "envoy.wasm.runtime.v8"
              code:
                local:
                  filename: "/var/local/lib/wasm/leukocyte.wasm"
            configuration:
              "@type": "type.googleapis.com/google.protobuf.StringValue"
              value: "{}"
---
# EnvoyFilter for Frontend (libcurl Target)
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: leukocyte-wasm-filter-frontend
  namespace: online-boutique
spec:
  workloadSelector:
    labels:
      app: frontend
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: leukocyte.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          config:
            name: leukocyte-plugin
            root_id: "leukocyte_root"
            vm_config:
              vm_id: "leukocyte_vm"
              runtime: "envoy.wasm.runtime.v8"
              code:
                local:
                  filename: "/var/local/lib/wasm/leukocyte.wasm"
            configuration:
              "@type": "type.googleapis.com/google.protobuf.StringValue"
              value: "{}"
